--- a/rapports/presentation-docker.tex
+++ b/rapports/presentation-docker.tex
@@ -138,7 +138,7 @@ Cgroups (control groups) est une fonctionnalité du kernel pour limiter, prioris
 
 Lorsqu'on utilise la commande \code{docker run} de Docker pour lancer un container, Docker peut utiliser cgroups et ainsi limiter les ressources du container\footnote{Docker - Runtime constraints on resources: \url{https://docs.docker.com/engine/reference/run/\#runtime-constraints-on-resources}}.
 
-\section{Contraintes liées au monde de l'embarqué}
+\section{Contraintes liées au monde de l'embarqué}\label{sec-contraintes-monde-embarque}
 On entend par système embarqué, un système qui est/peut être léger, autonome, à puissance limitée, à stockage réduit, avec un OS minimal et souvent connecté.
 
 Dans le monde de l'embarqué, il existe plusieurs problèmes récurrents lorsqu'on développe, déploie et maintient une application sur une cible. On peut citer les problèmes suivants :
